[Fixes PLANET-1718] Font-sizes and spacing tweak on Post and Evergreen

--- a/assets/scss/pages/_evergreen.scss
+++ b/assets/scss/pages/_evergreen.scss
@@ -37,5 +37,15 @@
       hyphens: none;
       line-height: 1.2;
     }
+
+    h3 {
+      font-weight: 300;
+      font-size: rem(20);
+      line-height: 1.3;
+
+      @include large-and-up {
+        width: 60%;
+      }
+    }
   }
 }
